fix: bounce white space when scrolling

--- a/cygal/src/tailwind.css
+++ b/cygal/src/tailwind.css
@@ -17,3 +17,13 @@
     @apply leading-tight;
   }
 }
+
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
+body {
+  overflow: auto;
+  height: 100%;
+}
